correction bug + align el footer

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -218,6 +218,7 @@ h2{
 }
 
 .backToTop {
+    margin-right: 20px;
     width: 50px;
     height: 50px;
     background-color: #303030;
@@ -279,6 +280,10 @@ footer {
 h4{
     margin: 0;
     font-size: 24px;
+}
+
+.p--credits{
+    grid-column: 4/-1;
 }
 
 .gridcol{
